<resources>
    <string name="app_name">PhishSafe</string>
    <string name="contact_us_text_button">Contact us!</string>
    <string name="contact_us_text_email_hint">Please enter your email address.</string>
    <string name="contact_message_hint">Enter your message here.</string>
    <string name="contact_phonenumber_hint">Please enter your phone number.</string>
    <string name="back_button_description">Go back to previous screen</string>
    <string name="contact_nav_btn_desc">Navigate to the contact us page.</string>
    <string name="settings_nav_btn">Navigate to the settings page</string>
    <string name="content_example_title">Title</string>
    <string name="content_description_example">The description of the topic</string>
    <string name="content_image_description">Relevant image to the topic</string>
    <string name="home_screen_nav">Go back to home screen.</string>
    <string name="dark_mode">Dark mode</string>
</resources>