<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contentCardView"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="10dp"
    android:backgroundTint="@color/layout_color"
    android:background="@color/layout_color"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:id="@+id/viewWrapper">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contentImage"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/content_image_description"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignTop="@+id/contentImage"
            android:layout_alignBottom="@id/contentImage"
            android:layout_toEndOf="@id/contentImage"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contentTitle"
                android:layout_marginStart="10dp"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:text="@string/content_example_title"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contentDescription"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:text="@string/content_description_example"
                android:textColor="@color/text_color"/>

        </LinearLayout>

        
        
    </RelativeLayout>

</androidx.cardview.widget.CardView>