<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".contactusfeature.ContactUsView">

    <Button
        android:id="@+id/contactButton"
        android:layout_width="152dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/component_color"
        android:text="@string/contact_us_text_button"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactMessageLayout"
        app:layout_constraintVertical_bias="0.257" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contactDetailsLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="105dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/text_color"
        app:boxStrokeColor="@color/text_color"
        app:boxStrokeWidth="2dp"
        app:helperText="Required*"
        app:helperTextTextColor="@color/error_color"
        app:hintTextColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127"
        app:startIconDrawable="@drawable/email_icon"
        app:startIconTint="@color/text_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contactEmailField"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:hint="@string/contact_us_text_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contactMessageLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/text_color"
        app:boxStrokeColor="@color/text_color"
        app:boxStrokeWidth="2dp"
        app:counterEnabled="true"
        app:counterMaxLength="200"
        app:counterTextColor="@color/text_color"
        app:helperText="Required*"
        app:helperTextTextColor="@color/error_color"
        app:hintTextColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactPhoneLayout"
        app:layout_constraintVertical_bias="0.078">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contactMessageText"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:hint="@string/contact_message_hint"
            android:inputType="textMultiLine"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contactPhoneLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/text_color"
        app:boxStrokeColor="@color/text_color"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactDetailsLayout"
        app:layout_constraintVertical_bias="0.0"
        app:startIconDrawable="@drawable/phone_icon"
        app:startIconTint="@color/text_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contactPhoneField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_phonenumber_hint"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/homePageNavButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        app:cornerRadius="90dp"
        android:backgroundTint="@color/component_color"
        android:contentDescription="@string/back_button_description"
        android:drawableRight="@drawable/baseline_arrow_back_24"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />



</androidx.constraintlayout.widget.ConstraintLayout>